<resources>
    <string name="app_name">mobileAPK</string>
    <string name="welcome">Witaj w naszej aplikacji!</string>
    <string name="apk_name">POGADANKOWO</string>
    <string name="witaj">Witaj! Zarejestruj się by móc dołączyć do czatu.</string>
    <string name="pt_login_rejestracja">Login</string>
    <string name="pass_haslo_rejestracja">Hasło</string>
    <string name="zaakceptuj">Akceptuję</string>
    <string name="regulamin"><a href="https://www.google.com/search?q=regulamin">regulamin</a></string>
    <string name="rejestruj">Zarejestruj</string>
    <string name="register">Rejestracja</string>
    <string name="login">Logowanie</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="btn_logowanie">Logowanie</string>
    <string name="pass_logowanie_haslo">Hasło</string>
    <string name="pt_login_logowanie">Zaloguj</string>
    <string name="textview_progress_logowanie">TextView</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="open_drawer">Otwórz menu</string>
    <string name="close_drawer">Zamknij menu</string>
    <string name="open_chat">Wyślij</string>
    <string name="menu_opt1">Czat</string>
    <string name="menu_opt2">Moje konto</string>
    <string name="menu_opt3">O aplikacji</string>
    <string name="menu_opt4">Wyloguj</string>
    <string name="send_button">Wyślij wiadomość</string>
    <string name="hint_message">Wyślij wiadomość...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
</resources>